--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,15 @@
   --color-5: rgb(0, 102, 255);
 
   font-family: 'Acari Sans', sans-serif;
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  background-color: var(--color-3);
+}
+div#root {
+  height: 100%;
 }
 
 input[type=number]::-webkit-inner-spin-button,
@@ -26,11 +35,26 @@ input[type=number] {
 }
 
 .paint-calculator-background {
-  background-color: var(--color-3);
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+.paint-calculator-input-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+@media only screen and (min-width: 1150px) {
+  .paint-calculator-input-container {
+    flex-direction: row;
+    align-items: start;
+    height: 100%;
+  }
+}
+
 
 .paint-calculator-background h3 {
   color: var(--color-2);
@@ -77,6 +101,11 @@ input[type=number] {
   background-color: var(--color-2); 
   border: solid var(--color-1);
   border-width: 1px 2px 2px 1px;
+}
+
+.paint-calculator-control-wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 .paint-calculator-background button:hover {
