--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --color-3: #E5E0FF;
   --color-4: #8EA7E0;
   --color-5: rgb(0, 102, 255);
+  --color-6: #fff2f296;
 
   font-family: 'Acari Sans', sans-serif;
   height: 100%;
@@ -35,10 +36,20 @@ input[type=number] {
 }
 
 .paint-calculator-background {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 1em;
+}
+
+.paint-calculator-background>h2 {
+  margin: 1em;
+}
+
+.paint-calculator-background .alert-info {
+  margin: 0.5em;
 }
 
 .paint-calculator-input-container {
@@ -117,6 +128,13 @@ align-items: center;
   color: var(--color-4);
   border: solid var(--color-5);
   border-width: 1px 2px 2px 1px;
+}
+
+.alert-info {
+  background-color: var(--color-6);
+  margin: 0.5em;
+  padding: 0.5em;
+  border: var(--color-4) solid 2px;
 }
 
 .alert-warning {
