--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,6 @@ div#root {
   height: 100%;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-}
 
 input {
   border: none;
@@ -29,8 +25,7 @@ input {
   background-color: transparent;
 }
 
-input[type=number] {
-  -moz-appearance: textfield;
+input {
   margin: 0 0.8em 0 0.8em;
   text-align: center;
 }
@@ -66,7 +61,6 @@ input[type=number] {
   }
 }
 
-
 .paint-calculator-background h3 {
   color: var(--color-2);
 }
@@ -97,7 +91,7 @@ input[type=number] {
   width: 120px;
 }
 
-.input-wrapper>input[type=number] {
+.input-wrapper>input {
   width: 60px;
   font-weight: bold;
   color: var(--color-2);
