feat: ability of change language to english

--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,10 @@ input {
   border-width: 1px 2px 2px 1px;
 }
 
+.paint-calculator-background button.small{
+  padding: 0.3em;
+}
+
 .paint-calculator-control-wrapper {
   display: flex;
   flex-direction: column;
